<resources>
    <string name="app_name">Exemplo Debug</string>
    <string name="hint_txtNome">Informe seu nome</string>
    <string name="hint_txtSobrenome">Sobrenome</string>
    <string name="labelExibir">Exibir</string>
    <string name="txtNome">Nome</string>
    <string name="txtEmail">email</string>
    <string name="btnOk">OK</string>
    <string name="txtAluno">Nome do Aluno</string>
    <string name="txtNascimento">Data de Nascimento</string>
    <string name="txtEmailAluno">E-mail</string>
    <string name="txtTelefoneAluno">Telefone</string>
    <string name="txtDisciplina">Disciplina</string>
</resources>
